Adjust job entry

--- a/data/flex-objects/vorstellung.yaml
+++ b/data/flex-objects/vorstellung.yaml
@@ -109,7 +109,7 @@ c10e58497c0c293ff83d6c243c385a7e:
   name: Pfeil
   vorname: Johannes
   funktion: 'Atemschutzgeräteträger, Maschinist, Gruppenführer, Kinderfeuerwehrwart'
-  beruf: Projektingenieur
+  beruf: Prozessingenieur
   ausbildung: 'Industriemechaniker, Maschinenbaustudium'
   datum: 1996
   beschreibung: 'In dem Dorf aus dem ich komme gehörte der Einsatz in der Feuerwehr zum Dorfleben dazu. So bin mit 9 Jahren in die Jugendfeuerwehr eingetreten, Übernahm mit Übergang in die Einsatzabteilung die Stellvertetende Leitung der Jugendfeuerwehr und hatte ein paar Jahre später die Funktion des Gerätewarts inne. Mit Familiengründung in Inheiden, wurde mir von den sehr offenen Kameraden direkt ein Spind zugwiesen. So konnte ich neue Kontakte knüpfen, Freundschaften schließen und nun auch Einsatzerfahrung auf dem Wasser sammeln.'
