--- a/attendance/attendance.yaml
+++ b/attendance/attendance.yaml
@@ -1,6 +1,18 @@
+Katastrophenschutzzug_12_09_2025__22_00_22_00_:
+    date: '12.09.2025, 22:00[22:00]'
+    eventName: Katastrophenschutzzug
+    ue: '1.0'
+    attendance: [{ 'Brinster, Jonas': false }, { 'Derbyshirr, Reilly': false }, { 'Frutig, Patrick': false }, { 'Haaf, Bastian': false }, { 'Hötterges, Mattheo': false }, { 'Imig, Alexander': false }, { 'Kargoscha, Cyrus': false }, { 'Kießwetter, Jörg': false }, { 'Klös, Sascha': false }, { 'Martens, Jan': false }, { 'Pfeil, Johannes': false }, { 'Reipold, Pascal': false }, { 'Reitz, Gerald': false }, { 'Reitz, Gerrit': false }, { 'Roth, Florian': false }, { 'Sandner, Manuel': false }, { 'Schmidt, Robin': false }, { 'Tag, Dominik': false }, { 'Tag, Oliver': false }, { 'Thiedemann, Alex': false }, { 'Thiedemann, André': false }]
+    teacher: ['Haaf, Bastian', 'Tag, Dominik']
 Online-Seminar_Katastrophenschutz_15_04_2025__18_50_21_00_:
     date: '15.04.2025, 18:50[21:00]'
     eventName: 'Online-Seminar Katastrophenschutz'
     ue: '2.9'
-    teacher: 'Haaf, Bastian'
-    attendance: [{ 'Brinster, Jonas': true }, { 'Derbyshirr, Reilly': false }, { 'Frutig, Patrick': false }, { 'Haaf, Bastian': false }, { 'Hötterges, Mattheo': false }, { 'Imig, Alexander': false }, { 'Kargoscha, Cyrus': false }, { 'Kießwetter, Jörg': false }, { 'Klös, Sascha': false }, { 'Martens, Jan': false }, { 'Pfeil, Johannes': false }, { 'Reipold, Pascal': false }, { 'Reitz, Gerald': true }, { 'Reitz, Gerrit': false }, { 'Roth, Florian': true }, { 'Sandner, Manuel': false }, { 'Schmidt, Robin': true }, { 'Tag, Dominik': false }, { 'Tag, Oliver': true }, { 'Thiedemann, Alex': false }, { 'Thiedemann, André': false }]
+    teacher: ['Haaf, Bastian']
+    attendance: [{ 'Brinster, Jonas': false }, { 'Derbyshirr, Reilly': true }, { 'Frutig, Patrick': false }, { 'Haaf, Bastian': true }, { 'Hötterges, Mattheo': false }, { 'Imig, Alexander': true }, { 'Kargoscha, Cyrus': false }, { 'Kießwetter, Jörg': true }, { 'Klös, Sascha': false }, { 'Martens, Jan': false }, { 'Pfeil, Johannes': false }, { 'Reipold, Pascal': false }, { 'Reitz, Gerald': false }, { 'Reitz, Gerrit': false }, { 'Roth, Florian': true }, { 'Sandner, Manuel': true }, { 'Schmidt, Robin': false }, { 'Tag, Dominik': false }, { 'Tag, Oliver': true }, { 'Thiedemann, Alex': true }, { 'Thiedemann, André': false }]
+Einsatz_bung_01_04_2025__19_00_21_00_:
+    date: '01.04.2025, 19:00[21:00]'
+    eventName: Einsatzübung
+    ue: '2.7'
+    teacher: ['Haaf, Bastian']
+    attendance: [{ 'Brinster, Jonas': false }, { 'Derbyshirr, Reilly': true }, { 'Frutig, Patrick': true }, { 'Haaf, Bastian': true }, { 'Hötterges, Mattheo': true }, { 'Imig, Alexander': true }, { 'Kargoscha, Cyrus': false }, { 'Kießwetter, Jörg': false }, { 'Klös, Sascha': true }, { 'Martens, Jan': false }, { 'Pfeil, Johannes': false }, { 'Reipold, Pascal': false }, { 'Reitz, Gerald': false }, { 'Reitz, Gerrit': false }, { 'Roth, Florian': false }, { 'Sandner, Manuel': false }, { 'Schmidt, Robin': false }, { 'Tag, Dominik': false }, { 'Tag, Oliver': false }, { 'Thiedemann, Alex': false }, { 'Thiedemann, André': false }]
