--- a/themes/feuerwehr-hungen/package.json
+++ b/themes/feuerwehr-hungen/package.json
@@ -24,12 +24,16 @@
     "url": "https://github.com/picturepan2/spectre/issues"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^3.9.4",
     "gulp-csscomb": "^3.0.8",
     "gulp-dart-sass": "^1.1.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "rollup": "^4.40.0"
   },
   "browserslist": [
     "last 4 Chrome versions",
@@ -41,7 +45,8 @@
   ],
   "scripts": {
     "dev": "gulp watch",
-    "build": "gulp build"
+    "build": "gulp build",
+    "build-timepicker": "rollup --config rollup.config.mjs"
   },
   "dependencies": {
     "@kurkle/color": "^0.3.4",
